# exams_scores_tracker_bot

./: .env.example  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
bot/: __main__.py
bot/application/: __init__.py  states.py
bot/application/dialogs/: __init__.py
bot/application/dialogs/menu_dialog/: dialog.py  getters.py  handlers.py
bot/application/dialogs/registration/: getters.py  handlers.py
bot/application/dialogs/registration_dialog/: __init__.py  dialog.py  getters.py
bot/application/dialogs/score_dialog/: __init__.py  dialog.py  getters.py  handlers.py
bot/application/getters/: common_getter.py
bot/application/handlers/: commands_handler.py
bot/core/: enums.py  menu.py
bot/core/config/: config.py  models.py
bot/core/dto/: __init__.py  score.py  user.py
bot/core/exceptions/: dialog_errors.py
bot/core/providers/: __init__.py  base_provider.py  i18n_provider.py  repository_providers.py  service_provider.py
bot/infrastructure/: dishka_container.py
bot/infrastructure/middlewares/: i18n_middleware.py  register_middleware.py
bot/infrastructure/migrations/: env.py
bot/infrastructure/migrations/versions/: 3134235f4268_.py  c0464522c3a5_.py
bot/infrastructure/utils/: i18n.py
bot/locales/: stub.pyi
bot/locales/en/LC_MESSAGES/: txt.ftl
bot/repository/implementations/: score_repository.py  user_cache_repository.py  user_repository.py
bot/repository/interfaces/: sqlalchemy_repository.py
bot/repository/models/: __init__.py  mixins.py  score.py  user.py
bot/services/: base.py  score_service.py  user_service.py
(+1 files in other folders)
