[tool.poetry]
name = "exam-track-bot"
version = "0.1.0"
description = ""
authors = ["dmitriy <dmitriydmgora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
aiogram-dialog = "^2.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
dishka = "^1.4.0"
asyncpg = "^0.30.0"
environs = "^11.0.0"
alembic = "^1.13.3"
fluentogram = "^1.1.7"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
